Updated RocksDBMetadataManager.java for 100M Scalability